# omnisol

./: .ammanrc.js  .editorconfig  .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json
liquidator/: Cargo.toml  Readme.md
liquidator/src/: liquidator.rs  main.rs  utils.rs
omnisol_oracle/: Cargo.toml
omnisol_oracle/oracle/: Cargo.toml
omnisol_oracle/oracle/src/: main.rs  utils.rs
oracle/: Cargo.toml  Readme.md
oracle/src/: cluster.rs  main.rs  utils.rs
programs/omnisol/: Cargo.toml  Readme.md
programs/omnisol/src/: events.rs  lib.rs  state.rs
programs/omnisol/src/instructions/: add_liquidator.rs  add_manager.rs  add_to_token_whitelist.rs  add_to_whitelist.rs  block_user.rs  burn_omnisol.rs  close_oracle.rs  close_pool.rs  deposit.rs  deposit_lp_tokens.rs  deposit_stake.rs  fee_setters.rs  init.rs  init_oracle.rs  init_pool.rs  liquidate_collateral.rs  mint_omnisol.rs  mint_pool_token.rs  mod.rs  pause_pool.rs  remove_from_whitelist.rs  remove_liquidator.rs  remove_manager.rs  resume_pool.rs  set_liquidation_fee.rs  unblock_user.rs  update_oracle_info.rs  update_pool.rs  withdraw.rs  withdraw_fee.rs  withdraw_lp_tokens.rs  withdraw_sol.rs  withdraw_stake.rs
programs/omnisol/src/utils/: common.rs  fee.rs  mod.rs  stake.rs  stake_account.rs  unstake_it.rs
tests/: omnisol.ts
