[package]
name = "liquidator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.25.0"
spl-stake-pool = "0.6.4"
clap = { version = "4.1.6", features = ["derive"] }
omnisol = { path = "../programs/omnisol" }
gimli = "0.27.2"
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
log = "0.4.17"
simplelog = "0.12.0"
base64 = "0.21.0"
