[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.9.29"
solana-sdk = "1.9.29"
solana-account-decoder = "1.9.29"
arrayref = "0.3.6"
clap = { version = "4.1.6", features = ["derive"] }
omnisol = { path = "../programs/omnisol" }
gimli = "0.27.2"
anchor-lang = "0.25.0"
anyhow = "1.0.69"
log = "0.4.17"
simplelog = "0.12.0"
