[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.9.29"
solana-sdk = "1.9.29"
solana-account-decoder = "1.9.29"
arrayref = "0.3.6"
clap = { version = "4.1.6", features = ["derive"] }
serde_json = "1.0"
serde = "1.0"
borsh-derive = "0.10.2"
borsh = "0.10.2"
omnisol = { path = "../../programs/omnisol"}
