[package]
name = "omnisol"
version = "0.0.4"
license = "Apache-2.0"
description = "Omnisol Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"]}
spl-stake-pool = { version = "0.6.4", features = [ "no-entrypoint" ] }
anchor-spl = "0.27.0"
rust_decimal = "1.26"
